webdeveloper protfolio commit 1

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web developer potfolio</title>
+
+
+   <link rel="stylesheet" href="styles/protfolio.css">
 </head>
 <body>
     <header>
-        
+        <nav>
+            <h3>mary</h3>
+            <ul>
+                <li><a href="">protfolio</a></li>
+                <li><a href="">blog</a></li>
+                <li><button>Hire me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
