webdeveloper protfolio commit 4

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 
    <link rel="stylesheet" href="styles/protfolio.css">
+
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -21,6 +22,19 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div>
+                <h3 class="banner- greeteng">HI, I am</h3>
+                <h1 class="banner-title">Mare hardy</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse doloribus nostrum minima porro id aliquam saepe totam numquam, exercitationem similique alias perferendis qui ipsam debitis tempora. Quisquam sed labore soluta?</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="ban btn-primary">contact</button>
+                <div>
+                    <img class="banner-profaile" src="imgess/jahid.png" alt="">
+                </div>
+                
+            </div>
+        </div>
     </header>
     <main>
 
