--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
-                <h3 class="banner- greeteng">HI, I am</h3>
+            <div class="banner-content">
+                <h3 class="banner-greeting">HI, I am</h3>
                 <h1 class="banner-title">Mare hardy</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse doloribus nostrum minima porro id aliquam saepe totam numquam, exercitationem similique alias perferendis qui ipsam debitis tempora. Quisquam sed labore soluta?</p>
+                <p class="banner-descripton">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
-                <button class="ban btn-primary">contact</button>
-                <div>
-                    <img class="banner-profaile" src="imgess/jahid.png" alt="">
-                </div>
-                
+                <button class="ban btn-primary">contact</button>   
+            </div>
+            <div>
+                <img class="banner-profaile" src="imgess/hardy.png" alt="">
             </div>
         </div>
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title"> About me</h3>
+            <p class="societon-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
     </main>
     <footer>
 
